tests/should_fail/sf005_bad_layout.hs
-- Should fail: layout violation - binding at wrong indentation level
module Sf005BadLayout where

f x = x
 + 1
  where
 y = 2
